working backend code